@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2017, 2018 Laboratoire de Recherche et Développement
+# Copyright (C) 2017, 2018, 2019 Laboratoire de Recherche et Développement
 # de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -29,7 +29,8 @@ s/[=[].*/=1/p
 res=`genaut $opts --stats="--%F=%L"`
 test "$opts" = "$res"
 
-genaut --ks-nca=..3 --l-nba=..3 --l-dsa=..3 --stats=%s,%e,%t,%c,%g >out
+genaut --ks-nca=..3 --l-nba=..3 --l-dsa=..3 --m-nba=..3 \
+       --stats=%s,%e,%t,%c,%g >out
 cat >expected <<EOF
 3,7,16,1,Fin(0)
 5,14,32,1,Fin(0)
@@ -40,6 +41,9 @@ cat >expected <<EOF
 4,6,6,1,Fin(0) | Inf(1)
 8,12,12,1,(Fin(0) | Inf(1)) & (Fin(2) | Inf(3))
 12,18,18,1,(Fin(0) | Inf(1)) & (Fin(2) | Inf(3)) & (Fin(4) | Inf(5))
+2,3,4,1,Inf(0)
+3,6,10,1,Inf(0)
+4,9,18,1,Inf(0)
 EOF
 diff out expected
 
